--- a/index.html
+++ b/index.html
@@ -24,19 +24,32 @@
             <div class="form-group">
                 <b>Try it out!</b>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Iron Man 3</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Quentin Tarantino</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Trial of the Chicago 7</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Punch Drunk Love</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Robert Downey Jr.</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Adam Sandler</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Wolf of Wall Street</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Leonardo DiCaprio</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Money Ball</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Christoph Waltz</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Boys</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Wentworth Miller</span></li>
-                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Office</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Iron Man
+                            3</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Quentin
+                            Tarantino</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Trial of
+                            the Chicago 7</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Punch-Drunk
+                            Love</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Robert Downey
+                            Jr.</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Adam
+                            Sandler</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The Wolf of
+                            Wall Street</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Leonardo
+                            DiCaprio</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Money
+                            Ball</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Christoph
+                            Waltz</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The
+                            Boys</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">Wentworth
+                            Miller</span></li>
+                    <li class="list-inline-item"><span onclick="tryItOut(this)" class="btn btn-light try">The
+                            Office</span></li>
                 </ul>
             </div>
             <div class="form-group">
@@ -45,8 +58,13 @@
             </div>
             <div class="form-group">
                 <label for="url">URL to be fetched</label>
-                <input type="url" class="form-control" disabled name="url" id="url"
-                    placeholder="www.your-api.com/?your-movie-123">
+                <div class="input-group">
+                    <input type="url" style="cursor: pointer;" class="form-control" disabled name="url" id="url"
+                        placeholder="www.your-api.com/?your-movie-123">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" id="openURL">Open</button>
+                    </div>
+                </div>
             </div>
             <button id="get" class="btn btn-primary">Submit</button>
         </form>
@@ -102,7 +120,6 @@
     </nav>
 
 
-    <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -112,6 +129,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
